added doxer/ to automake tree.
Tue Feb 28 01:33:06 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am:
        * configure.in: added doxer/ to automake tree.

svn path=/trunk/; revision=3471

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BEAST/BSE
 
-SUBDIRS = . data sfi bse plugins shell beast-gtk launchers library tools po tests test docs web
+SUBDIRS = . data sfi bse plugins shell beast-gtk launchers library tools po tests test doxer docs web
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
