added .bse and .bsewave file types.
Sat Mar  4 14:13:27 2006  Tim Janik  <timj@gtk.org>

        * web/htaccess.in: added .bse and .bsewave file types.

svn path=/trunk/; revision=3475

--- a/web/htaccess.in
+++ b/web/htaccess.in
@@ -3,7 +3,10 @@
 #
 # GNU General Public License version 2 or (at your option) any later version.
 
+# --- setup charset and file types ---
 AddDefaultCharset utf-8
+AddType audio/x-bse .bse
+AddType audio/x-bsewave .bsewave
 
 # --- enable mod_rewrite ---
 RewriteEngine On
