up version to 0.7.0, binary 0, interface 0.
Tue Mar  7 02:31:18 2006  Tim Janik  <timj@gtk.org>

        * configure.in: up version to 0.7.0, binary 0, interface 0.

        * merged libsfi.la and libbirnet.la into libbse.la, so only
        libbse.so is installed as public library now.

        * configure.in:
        * Makefile.am: added birnet/.

        * configure.in: execute checks from birnet/configure.inc.
        comment fixups.

        * data/bse.pc.in: libbse.so doesn't link against libsfi.so anymore.

        * data/Makefile.am:
        * data/sfi.pc.in: removed.

svn path=/trunk/; revision=3489

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BEAST/BSE
 
-SUBDIRS = . data sfi bse plugins shell beast-gtk launchers library tools po tests test doxer docs web
+SUBDIRS = . data birnet sfi bse plugins shell beast-gtk launchers library tools po tests test doxer docs web
 
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
@@ -17,7 +17,7 @@ test:
 .PHONY: test
         
 # extra dependancies
-configure: acbeast.m4
+configure: acbeast.m4 birnet/configure.inc
 
 CLEANFILES += $(strip		\
 	intltool-extract	\
